bot only reacts messages that mention it and have a single command prefix

--- a/docker/dev-env.rc
+++ b/docker/dev-env.rc
@@ -1,2 +1,2 @@
-DISCORD_BOT_TOKEN=NjcyMjY1OTIyODY1NTI4ODU0.XjI_WQ.-ls7fK1dNmBFeLC8hSFllHOU4YY
-BOT_COMMAND_PREFIX=
+DISCORD_BOT_TOKEN=
+BOT_COMMAND_PREFIX=!
